--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
-  }
+    "express": "^4.18.1",
+    "express-react-views": "^0.11.0",
+    "mongoose": "^6.5.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gavvahar/car-website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gavvahar/car-website/issues"
+  },
+  "homepage": "https://github.com/gavvahar/car-website#readme"
 }
