--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.5.3"
+    "mongoose": "^6.5.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "repository": {
     "type": "git",
